service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sendinblue
spec:
  selector:
    app: sendinblue
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
  type: ClusterIP
