ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sendinblue-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        backend:
          service:
            name: sendinblue
            port:
              number: 80
